--- a/css/custom.css
+++ b/css/custom.css
@@ -8,9 +8,9 @@
 	max-width: 80%;
 }
 
-div.halfblock{
+.halfblock{
 	float: left;
-	width: 45%;
+	width: 45% !important;
 	text-align: left;
 	margin-right: 5%;
 }
